Synchronized the download to what Ilinca wrote on the phenotype page

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -118,9 +118,20 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<h3><a name="phenotype-download">Gene phenotype download</a></h3>
 			
-			<p>The results in the table may be downloaded in either CSV or Microsoft Excel format.  The resulting download respects all filters that have been applied to the data.</p>
+			<p>The results in the table may be downloaded for further processing.  The resulting download respects all filters that have been applied to the data.</p>
 			
-			<img class="well" src="img/gene-phenotype-download.png" />
+			<p>
+			We offer 2 export options for the data in the table: 
+			<ul>
+				<li> TSV, text file with tab separated variables (<img title="TSV" style="vertical-align:text-bottom;" src="img/tsv.png"/>)</li>
+				<li> XLS, Microsoft Excel spread sheet (<img title="XSL" style="vertical-align:text-bottom;" src="img/xls.png"/>)</li>
+			</ul>
+			</p>
+			
+			<p>
+				Please note that in the table displayed on our page entry lines are collapsed based on sex. That is, if for 2 lines all fields are identical except the gender, they will be shown together for a better user experience.
+				In the export file however we export all lines separately, to allow easier further processing of the data. This holds for both XLS and TSV files.
+			</p>
 			
 			<h3><a name="phenotype-images">Gene phenotype images</a></h3>
 			
