--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -61,12 +61,12 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<div class="page-header"><h3>Gene details page</h3></div> 
 
 			<h3><a name="details">Gene details</a></h3>
-			<p>The gene details section of the page shows information about the marker.  The information displayed includes
+			<p>The gene details section of the page shows information about the gene.  The information displayed includes:
 			<ul>
 				<li>Name</li>
 				<li>Synonyms</li>
-				<li>MGI ID with a link to the corresponding page at Mouse Genome Informatics</li>
-				<li>The latest IMPC production status for this gene.  This checks all ongoing projects for this gene in <a href>iMits</a> and displays the status of the project that is closest to producing a mouse.</li>
+				<li>MGI ID which links to the corresponding gene detail page at <a href="http://www.informatics.jax.org">Mouse Genome Informatics</a></li>
+				<li>The latest IMPC production status for this gene.  This aggregates the statuses of all ongoing projects for this gene in <a href="">iMits</a> and displays the status of the project that is closest to producing a mouse.</li>
 				<li>Links to different view of the gene in the Ensembl genome browser: 
 				<strong>Gene view</strong> links to the browser centered on the gene, 
 				<strong>Location view</strong> links to a view of the chromosome,
@@ -76,8 +76,8 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<img class="well" src="img/gene-details.png" />
 
 			<h3><a name="browser">Gene browser and more information</a></h3>
-			<p>By clicking the <strong>Show More Gene Information</strong> link, a browser will be shown displaying a quick view
-			of the gene's location graphically.  The browser is interactive and you can zoom and scroll to see nearby features.
+			<p>By clicking the <strong>Show More Gene Information</strong> link, a genome browser will be shown displaying a graphical view
+			of the gene's location and surrounding features.  The browser is interactive and you can use your mouse to zoom and scroll.
 			</p>
 
 			<p>This section also shows all Vega, NCBI, or cCDS IDs associated with this gene.</p>
@@ -86,7 +86,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			
 			<h3><a name="phenotypes">Gene phenotypes</a></h3>
 			
-			<p>The gene phenotypes section shows the associations of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms</p>
+			<p>The gene phenotypes section shows the association of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms.</p>
 			
 			<img class="well" src="img/gene-phenotypes.png" />
 			
