--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 	<div class="row">
 		<div class="well">
 			<h1>IMPC gene details page documentation</h1>
-			<p class="lead">Gene details</p>
+			<p class="lead">More detailed information about the gene details page</p>
 		</div>
 	</div>
 
@@ -35,6 +35,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 					<ul>
 						<li><a href="gene-help.html#details">Gene details</a></li>
 						<li><a href="gene-help.html#browser">Gene browser and more information</a></li>
+						<li><a href="gene-help.html#pre-qc">Pre-QC phenotype heatmap</a></li>
 						<li><a href="gene-help.html#phenotypes">Gene-Phenotype associations</a>
 							<ul>
 								<li><a href="gene-help.html#phenotype-summary">Summary</a></li>
@@ -58,7 +59,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 		<div class="span8">
 
-			<div class="page-header"><h3>Gene details page</h3></div> 
+			<div class="page-header"><h3>Gene details page</h3></div>
 
 			<h3><a name="details">Gene details</a></h3>
 			<p>The gene details section of the page shows information about the gene.  The information displayed includes:
@@ -83,6 +84,21 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<p>This section also shows all Vega, NCBI, or cCDS IDs associated with this gene.</p>
 			
 			<img class="well" src="img/gene-browser.png" />
+			
+			<h3><a name="pre-qc">Pre-QC phenotype heatmap</a></h3>
+
+			<p>When there is data available, but not yet complete, from the IMPC resource, the Pre-QC panel will appear.  The pre QC panel shows a heatmap of the results of preliminary analysis on data that has been collected by the IMPC production centers to date, but is not yet complete. In order to be marked Complete, 7 males and 7 females must complete all core screens required by the IMPC pipeline.
+			</p>
+
+			<p>Please visit the <a href="https://www.mousephenotype.org/heatmap/manual.html">comprehensive heatmap documentation</a> for more information about the heatmap.</p>			
+
+			<p>Please visit the <a href="https://www.mousephenotype.org/impress">IMPReSS</a> website for more information about the IMPC pipeline.</p>			
+
+			<p>
+			NOTE: Use this analysis with caution as the analysis is likely to change when more data becomes available.
+			</p>
+
+			<img class="well" src="img/gene-pre-qc.png" />
 			
 			<h3><a name="phenotypes">Gene phenotypes</a></h3>
 			
