Add text for expression section

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -152,10 +152,18 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			
 			<h3><a name="phenotype-images">Gene phenotype images</a></h3>
 			
-			<p>The phenotype images section shows all the images associated to this gene via direct annotation from the image source</p>
+			<p>The phenotype images section shows all the images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
+			
+			<p>NOTE: This is a work in progress. Images may depict phenotypes not statistically associated with a mouse strain.</p>
+
 			<img class="well" src="img/gene-phenotype-images.png" />
 
 			<h3><a name="expression-images">Gene expression images</a></h3>
+
+			<p>The expression images section shows all the expression images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
+
+			<p>NOTE: This is a work in progress. Images may depict phenotypes not statistically associated with a mouse strain.</p>
+
 			<img class="well" src="img/gene-expression-images.png" />
 			
 			<h3><a name="alleles">Gene ES cells &amp; alleles</a></h3>
