added documentatin quick link to the index page (Overview)

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -30,6 +30,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<div class="page-header"><h3>Quick help links</h3></div>
 		
 				<ul id="navbar" class="nav nav-list">
+				<li><a href="index.html">Overview</a></li>
 				<li><a href="search-help.html">Search</a></li>
 				<li><a href="gene-help.html"><span class="alert-message info">Genes</span></a>
 					<ul>
