--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -103,7 +103,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			
 			<h3><a name="phenotypes">Gene phenotypes</a></h3>
 			
-			<p>The gene phenotypes section shows the association of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms.</p>
+			<p>The gene phenotypes section of a gene page shows the association of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms.</p>
 			
 			<img class="well" src="img/gene-phenotypes.png" />
 			
