--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -68,7 +68,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<li>Name</li>
 				<li>Synonyms</li>
 				<li>MGI ID which links to the corresponding gene detail page at <a href="http://www.informatics.jax.org">Mouse Genome Informatics</a></li>
-				<li>The latest IMPC production status for this gene.  This aggregates the statuses of all ongoing projects for this gene in <a href="">iMits</a> and displays the status of the project that is closest to producing a mouse.</li>
+				<li>The latest IMPC production status for this gene.  This aggregates the statuses of all ongoing projects for this gene in <a href="https://www.mousephenotype.org/imits/">iMits</a> and displays the status of the project that is closest to producing a mouse.</li>
 				<li>Links to different view of the gene in the Ensembl genome browser: 
 				<strong>Gene view</strong> links to the browser centered on the gene, 
 				<strong>Location view</strong> links to a view of the chromosome,
