remove redundant word

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 	<div class="row">
 		<div class="well">
 			<h1>IMPC gene details page documentation</h1>
-			<p class="lead">More detailed information about the gene details page</p>
+			<p class="lead">More detailed information about the gene page</p>
 		</div>
 	</div>
 
