add source and description of source

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -115,6 +115,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<li>Allele</li>
 			<li>Zygosity</li>
 			<li>Sex</li>
+			<li>Source - project that asserted the association</li>
 			</ul>
 
 			<p>Due to this combining process, the number of rows in the results table may not equal the count shown. Also, be aware that MP terms may have more than one high level parent and so the counts in the summary may not equal the total number of entries.</p>
