--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -62,7 +62,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<div class="page-header"><h3>Gene details page</h3></div>
 
-			<h3><a name="details">Gene details</a></h3>
+			<h3><a name="details" href='#'>Gene details</a></h3>
 			<p>The gene details section of the page shows information about the gene.  The information displayed includes:
 			<ul>
 				<li>Name</li>
@@ -77,7 +77,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			</ul>
 			<img class="well" src="img/gene-details.png" />
 
-			<h3><a name="browser">Gene browser and more information</a></h3>
+			<h3><a name="browser" href='#'>Gene browser and more information</a></h3>
 			<p>By clicking the <strong>Show More Gene Information</strong> link, a genome browser will be shown displaying a graphical view
 			of the gene's location and surrounding features.  The browser is interactive and you can use your mouse to zoom and scroll.
 			</p>
@@ -86,7 +86,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			
 			<img class="well" src="img/gene-browser.png" />
 			
-			<h3><a name="pre-qc">Pre-QC phenotype heatmap</a></h3>
+			<h3><a name="pre-qc" href='#'>Pre-QC phenotype heatmap</a></h3>
 
 			<p>When there is data available, but not yet complete, from the IMPC resource, the Pre-QC panel will appear.  The pre QC panel shows a heatmap of the results of preliminary analysis on data that has been collected by the IMPC production centers to date, but is not yet complete. In order to be marked Complete, 7 males and 7 females must complete all core screens required by the IMPC pipeline.
 			</p>
@@ -101,13 +101,13 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<img class="well" src="img/gene-pre-qc.png" />
 			
-			<h3><a name="phenotypes">Gene phenotypes</a></h3>
+			<h3><a name="phenotypes" href='#'>Gene phenotypes</a></h3>
 			
 			<p>The gene phenotypes section of a gene page shows the association of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms.</p>
 			
 			<img class="well" src="img/gene-phenotypes.png" />
 			
-			<h3><a name="phenotype-summary">Gene phenotype summary</a></h3>
+			<h3><a name="phenotype-summary" href='#'>Gene phenotype summary</a></h3>
 			
 			<p>A summary of phenotype terms for this gene with associated counts.  The counts indicate the number of unique combinations of:
 			<ul>
@@ -122,20 +122,20 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			
 			<img class="well" src="img/gene-phenotype-summary.png" />
 			
-			<h3><a name="phenotype-table">Gene phenotype table</a></h3>
+			<h3><a name="phenotype-table" href='#'>Gene phenotype table</a></h3>
 			
 			<p>The phenotype table lists the individual phenotypes associated to this gene through a specific allele.  If both sexes are associated, then both are shown on the same row indicated by the male (<img src="../img/icon-male.png" />) / female (<img src="../img/icon-female.png" />) icons.</p>
 			
 			<img class="well" src="img/gene-phenotype-table.png" />
 			
-			<h3><a name="phenotype-filtering">Gene phenotype filtering</a></h3>
+			<h3><a name="phenotype-filtering" href='#'>Gene phenotype filtering</a></h3>
 
 			<p>The results shown in the phenotype table may be filtered using the dropdown filters.  Select the check boxes to include entries pertaining to the selection.  The displayed rows are the result of logically ORing within and logically ANDing between dropdowns.</p>
 
 			<img class="well" src="img/gene-phenotype-filter.png" />
 			<img class="well" src="img/gene-phenotype-filter1.png" />
 
-			<h3><a name="phenotype-download">Gene phenotype download</a></h3>
+			<h3><a name="phenotype-download" href='#'>Gene phenotype download</a></h3>
 			
 			<p>The results in the table may be downloaded for further processing.  The resulting download respects all filters that have been applied to the data.</p>
 			
@@ -152,7 +152,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				In the export file however we export all lines separately, to allow easier further processing of the data. This holds for both XLS and TSV files.
 			</p>
 			
-			<h3><a name="phenotype-images">Gene phenotype images</a></h3>
+			<h3><a name="phenotype-images" href='#'>Gene phenotype images</a></h3>
 			
 			<p>The phenotype images section shows all the images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
 			
@@ -160,7 +160,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<img class="well" src="img/gene-phenotype-images.png" />
 
-			<h3><a name="expression-images">Gene expression images</a></h3>
+			<h3><a name="expression-images" href='#'>Gene expression images</a></h3>
 
 			<p>The expression images section shows all the expression images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
 
@@ -168,7 +168,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<img class="well" src="img/gene-expression-images.png" />
 			
-			<h3><a name="alleles">Gene ES cells &amp; alleles</a></h3>
+			<h3><a name="alleles" href='#'>Gene ES cells &amp; alleles</a></h3>
 			
 			<p>The alleles and ES cells section describes the mutations available from the IKMC resource.  Each row corresponds to an allele of this gene.  A diagram is included depicting the mutation the allele carries and a link to where the ES cell or mouse may be purchased when available.  The <strong>genbank file</strong> link points to a genbank file describing the genomic sequence of the allele.</p>
 
