added info about multiple parents on the gene help page.

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -109,6 +109,8 @@
 			
 			<img class="well" src="img/gene-phenotypes.png" />
 			
+			Phenotypes may have multimple parents so the same phenotype call can be counted twice in the summary above. This is why in the example shown here, we have 27 phenotype associations in the table but we get 31 by adding the numbers in the summary.
+			
 			<h3><a name="phenotype-summary" href='#'>Gene phenotype summary</a></h3>
 			
 			<p>A summary of phenotype terms for this gene with associated counts.  The counts indicate the number of unique combinations of:
