some changes on gene-help

--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -173,7 +173,6 @@
                             <p>The results shown in the phenotype table may be filtered using the dropdown filters.  Select the check boxes to include entries pertaining to the selection.  The displayed rows are the result of logically ORing within and logically ANDing between dropdowns.</p>
 
                             <img src="img/gene-phenotype-filter.png" alt="Filter be top level MP term" />
-                            <img src="img/gene-phenotype-filter1.png" alt="Filter by center or top level MP term"/>
 
                             <h4><a name="phenotype-download" href='#'>Gene phenotype download</a></h4>
 
@@ -181,10 +180,10 @@
 
                             <p>We offer 2 export options for the data in the table: </p>
                             <ul>
-                                <li> TSV, text file with tab separated variables (<img title="TSV" style="vertical-align:text-bottom;" src="img/tsv.png"/>)</li>
-                                <li> XLS, Microsoft Excel spread sheet (<img title="XSL" style="vertical-align:text-bottom;" src="img/xls.png"/>)</li>
+                                <li> TSV, text file with tab separated variables </li>
+                                <li> XLS, Microsoft Excel spread sheet</li>
                             </ul>
-
+														<img title="XSL" style="vertical-align:text-bottom;" src="img/export.png"/>
                             <p>
                                 In the table displayed on our page entry lines are collapsed based on sex. That is, if for 2 lines all fields are identical except the gender, they will be shown together for a better user experience.
                                 In the export file however we export all lines separately, to allow easier further processing of the data. This holds for both XLS and TSV files.
