--- a/WebContent/resources/documentation/gene-help.html
+++ b/WebContent/resources/documentation/gene-help.html
@@ -62,19 +62,19 @@
                                 <li><a href="search-help.html">Search</a></li>
                                 <li><a href="gene-help.html"><span class="alert-message info">Genes</span></a>
                                     <ul>
-                                        <li><a href="gene-help.html#details">Gene details</a></li>
-                                        <li><a href="gene-help.html#browser">Gene browser</a></li>
-                                        <li><a href="gene-help.html#pre-qc">Pre-QC phenotype heatmap</a></li>
-                                        <li><a href="gene-help.html#phenotypes">Gene-Phenotype associations</a>
+                                        <li><a href="gene-help.html#details">Gene Details</a></li>
+                                        <li><a href="gene-help.html#browser">Gene Browser</a></li>
+                                        <li><a href="gene-help.html#pre-qc">Pre-QC Phenotype Heatmap</a></li>
+                                        <li><a href="gene-help.html#phenotypes">Gene-Phenotype Associations</a>
                                             <ul>
                                                 <li><a href="gene-help.html#phenotype-summary">Summary</a></li>
-                                                <li><a href="gene-help.html#phenotype-table">Table of associations</a></li>
+                                                <li><a href="gene-help.html#phenotype-table">Table of Associations</a></li>
                                                 <li><a href="gene-help.html#phenotype-filtering">Filtering</a></li>
-                                                <li><a href="gene-help.html#phenotype-download">Downloading results</a></li>
+                                                <li><a href="gene-help.html#phenotype-download">Downloading Results</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="gene-help.html#phenotype-images">Gene-Phenotype images</a>
-                                        <li><a href="gene-help.html#expression-images">Gene expression images</a>
+                                        <li><a href="gene-help.html#phenotype-images">Gene-Phenotype Images</a>
+                                        <li><a href="gene-help.html#expression-images">Gene Expression Images</a>
                                         <li><a href="gene-help.html#alleles">Order Mouse and ES Cells</a>
                                     </ul>
                                 </li>
@@ -97,9 +97,11 @@
 
                         <div class="content node">
 
-                            <h3>Explore the diverse entry points to mouse phenotype data.</h3>
+                            <!-- h3>Explore the diverse entry points to mouse phenotype data.</h3-->
+                            <h1>Gene Page Documentation</h1>
+		
                             
-                            <h3><a name="details" href='#'>Gene details</a></h3>
+                            <h3><a name="details" href='#'>Gene Details</a></h3>
                             <p>The gene details section of the page shows information about the gene.  The information displayed includes:
                             <ul>
                                 <li>Name</li>
@@ -114,7 +116,7 @@
                             </ul>
                             <img src="img/gene-details.png" />
 
-                            <h3><a name="browser" href='#'>Gene browser</a></h3>
+                            <h3><a name="browser" href='#'>Gene Browser</a></h3>
                             <p>By clicking the <strong> Gene Browser</strong> link, a genome browser will be shown displaying a graphical view
                                 of the gene's location and surrounding features.  The browser is interactive and you can use your mouse to zoom and scroll.
                             </p>
@@ -122,13 +124,13 @@
                             <img src="img/gene-browser.png" />
 
 
-                            <h3><a name="phenotypes" href='#'>Gene phenotypes</a></h3>
+                            <h3><a name="phenotypes" href='#'>Gene Phenotypes</a></h3>
 
                             <p>The gene phenotypes section of a gene page shows the association of genes to <a href="http://www.informatics.jax.org/searches/MP_form.shtml">Mammalian phenotype</a> terms.</p>
                             <img src="img/gene-phenotypes.png" />
                             
 
-                            <h3><a name="phenotype-summary" href='#'>Gene phenotype summary</a></h3>
+                            <h3><a name="phenotype-summary" href='#'>Gene Phenotype Summary</a></h3>
 
                             <p>A summary of phenotype terms for this gene with associated counts.  The counts indicate the number of unique combinations of:
                             <ul>
@@ -147,19 +149,19 @@
                             <img src="img/gene-phenotype-summary.png" />
 														<p> The icons on the right hand side show a visual summary of the same data. Blue icons can be clicked to filter the table.</p>
 
-                            <h3><a name="phenotype-table" href='#'>Gene phenotype table</a></h3>
+                            <h3><a name="phenotype-table" href='#'>Gene Phenotype Table</a></h3>
 
                             <p>The phenotype table lists the individual phenotypes associated to this gene through a specific allele.  If both sexes are associated, then both are shown on the same row indicated by the male / female icons (<img src="img/both-sexes-icon.png" />).</p>
                             <img src="img/gene-phenotype-table.png" alt="" />
 
 
-                            <h3><a name="phenotype-filtering" href='#'>Gene phenotype filtering</a></h3>
+                            <h3><a name="phenotype-filtering" href='#'>Gene Phenotype Filtering</a></h3>
 
                             <p>The results shown in the phenotype table may be filtered using the dropdown filters.  Select the check boxes to include entries pertaining to the selection.  The displayed rows are the result of logically ORing within and logically ANDing between dropdowns.</p>
                             <img src="img/gene-phenotype-filter.png" alt="Filter be top level MP term" />
 
 
-                            <h3><a name="phenotype-download" href='#'>Gene phenotype download</a></h3>
+                            <h3><a name="phenotype-download" href='#'>Gene Ohenotype Download</a></h3>
 
                             <p>The results in the table may be downloaded for further processing.  The resulting download respects all filters that have been applied to the data.</p>
                             <p>We offer 2 export options for the data in the table: </p>
@@ -174,7 +176,7 @@
                             </p>
 
 
-														<h3><a name="pre-qc" href='#'>Pre-QC phenotype heatmap</a></h3>
+														<h3><a name="pre-qc" href='#'>Pre-QC Phenotype Heatmap</a></h3>
 
                             <p>When there is data available, but not yet complete, from the IMPC resource, the Pre-QC panel will appear.  The pre QC panel shows a heatmap of the results of preliminary analysis on data that has been collected by the IMPC production centers to date, but is not yet complete. In order to be marked Complete, 7 males and 7 females must complete all core screens required by the IMPC pipeline.
                             </p>
@@ -184,7 +186,7 @@
                             <img src="img/gene-pre-qc.png" />
 
 
-                            <h3><a name="phenotype-images" href='#'>Gene phenotype images</a></h3>
+                            <h3><a name="phenotype-images" href='#'>Gene Phenotype Images</a></h3>
 
                             <p>The phenotype images section shows all the images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
                             <p>NOTE: This is a work in progress. Images may depict phenotypes not statistically associated with a mouse strain.</p>
@@ -192,7 +194,7 @@
 														<br/><br/>
 
 
-                            <h3><a name="expression-images" href='#'>Gene expression images</a></h3>
+                            <h3><a name="expression-images" href='#'>Gene Expression Images</a></h3>
 
                             <p>The expression images section shows all the expression images associated to this gene via direct annotation from the image source. Currently all images are courtesy of the <a href="http://www.sanger.ac.uk/mouseportal/">Sanger Mouse Genetic Project</a>.</p>
                             <p>NOTE: This is a work in progress. Images may depict phenotypes not statistically associated with a mouse strain.</p>
